add hallo world rust

--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "template",
+  "name": "hello_world_but_game_of_life",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/ThorD125/template",
+  "repository": "https://github.com/ThorD125/hello_world_but_game_of_life",
   "author": "ThorD125",
-  "license": "GPL-3.0-only",
-  "scripts": {
-    "save": "git add . && git commit -m f && git push && git status",
-    "update": "git fetch origin && git checkout development && git pull",
-    "fix": "git reset --soft HEAD~1 && git pull && yarn save"
-  }
+  "license": "GPL-3.0-only"
 }
